cabal-version: 3.0
name:          hscript
version:       0.1.0.0
synopsis:      Run GHCi-style Haskell scripts with cabal dependency resolution.
description:   Static notebook style environment.
license:       MIT
build-type:    Simple

executable hscript
  main-is: Main.hs
  other-modules: HScript.Parse
                 HScript.Transform
                 HScript.Run
  build-depends:      base >= 4 && < 5,
                      megaparsec >= 9.0  && < 10,
                      text >= 1.2  && < 3,
                      process >= 1.6  && < 1.8,
                      directory>= 1.3  && < 1.4,
                      filepath >= 1.4  && < 1.6,
                      temporary >= 1.3  && < 1.4
  hs-source-dirs:     src,
                      app
  default-extensions: OverloadedStrings
                      RecordWildCards
  ghc-options:        -Wall
  default-language:   Haskell2010
