cabal-version: 3.0
name:          sabela
version:       0.1.0.0
synopsis:      Run GHCi-style Haskell scripts with cabal dependency resolution.
description:   Static notebook style environment.
license:       MIT
build-type:    Simple

executable sabela
  main-is: Main.hs
  other-modules: Sabela.Markdown,
                 Sabela.Notebook,
                 Sabela.Parse,
                 Sabela.Resolve,
                 Sabela.Reactive,
                 Sabela.Run,
                 Sabela.Transform
  build-depends:      base >= 4 && < 5,
                      aeson >= 2 && < 3,
                      megaparsec >= 9.0  && < 10,
                      text >= 1.2  && < 3,
                      process >= 1.6  && < 1.8,
                      directory>= 1.3  && < 1.4,
                      filepath >= 1.4  && < 1.6,
                      servant-server,
                      stm,
                      temporary >= 1.3  && < 1.4,
                      containers      >= 0.6   && < 0.8,
                      bytestring      >= 0.10  && < 0.13,
                      http-types      >= 0.12  && < 0.13,
                      stm             >= 2.5   && < 2.6,
                      tagged          >= 0.8   && < 0.9,
                      warp            >= 3.3   && < 3.5,
                      wai             >= 3.2   && < 3.3,
                      reactive-banana >= 1.2   && < 1.4
  hs-source-dirs:     src,
                      app
  default-extensions: OverloadedStrings
                      RecordWildCards
  ghc-options:        -Wall
  default-language:   Haskell2010

library
  exposed-modules: Sabela.Parse,
                   Sabela.Transform,
                   Sabela.Run,
                   Sabela.Markdown,
                   Sabela.Notebook,
                   Sabela.Resolve,
                   Sabela.Reactive,
                   Sabela.Server,
                   Sabela.Server.Types,
                   Sabela.Session
  build-depends:      base >= 4 && < 5,
                      aeson >= 2 && < 3,
                      megaparsec >= 9.0  && < 10,
                      text >= 1.2  && < 3,
                      process >= 1.6  && < 1.8,
                      directory>= 1.3  && < 1.4,
                      filepath >= 1.4  && < 1.6,
                      servant-server,
                      stm,
                      temporary >= 1.3  && < 1.4,
                      containers      >= 0.6   && < 0.8,
                      bytestring      >= 0.10  && < 0.13,
                      http-types      >= 0.12  && < 0.13,
                      stm             >= 2.5   && < 2.6,
                      tagged          >= 0.8   && < 0.9,
                      warp            >= 3.3   && < 3.5,
                      wai             >= 3.2   && < 3.3,
                      reactive-banana >= 1.2   && < 1.4
  hs-source-dirs:     src,
                      app
  default-extensions: OverloadedStrings
                      RecordWildCards
  ghc-options:        -Wall
  default-language:   Haskell2010

executable sabela-server
  main-is: Server.hs
  build-depends: base >= 4 && < 5,
                 directory >= 1.3 && < 1.4,
                 warp >= 3.3  && < 3.5,
                 sabela
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Test.Parse,
                 Test.Transform,
                 Test.Markdown,
                 Test.Integration
  build-depends: base >= 4 && < 5,
                 text >= 1.2  && < 2.2,
                 sabela,
                 tasty >= 1.4  && < 1.6,
                 tasty-hunit  >= 0.10 && < 0.11
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall
